Fix text alignement of the album and artirst
Fix suggested by @ferferga for the alignment of the album, artist button in the player.
Artist and album text are now align on the left.

--- a/src/components/remotecontrol/remotecontrol.css
+++ b/src/components/remotecontrol/remotecontrol.css
@@ -36,12 +36,10 @@
     margin: 0 0 0.5em 0.5em;
 }
 
-.nowPlayingAlbum a {
-    font-weight: normal;
-}
-
+.nowPlayingAlbum a,
 .nowPlayingArtist a {
     font-weight: normal;
+    text-align: left !important;
 }
 
 .nowPlayingButtonsContainer {
